[package]
name = "indodax-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.6", features = ["json","blocking"] }
ring = "0.16.20"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.122"
urlencoding = "2.1.3"
